# AutoUAV

./: .gitignore  README.md
darknet_ros/darknet/: Makefile  darknet
darknet_ros/darknet_ros/: CMakeLists.txt
flight_control/: CMakeLists.txt  package.xml
flight_control/scripts/: auto_control.py  keyboard_control.py
flight_control/src/: flight_control.cpp
image_match/: CMakeLists.txt  package.xml
image_match/include/: image_match.hpp  image_match_tool.hpp
image_match/msg/: match_result.msg
image_match/src/: image_match.cpp  image_match_tool.cpp  run_image_match.cpp
image_pub/: CMakeLists.txt  package.xml
image_pub/include/: image_pub.hpp
image_pub/src/: image_pub.cpp
image_save/: CMakeLists.txt  package.xml
image_save/src/: image_save.cpp
laser_radar/: CMakeLists.txt  package.xml
laser_radar/include/: api.h
laser_radar/src/: cloud_publish.cpp  depth_publish.cpp  lidar_publish.cpp
laser_radar/srv/: camera.srv
nanodet/: CMakeLists.txt  README.md  config.yaml  nanodet-m.onnx  package.xml
nanodet/include/: nanodet.h
nanodet/src/: main.cpp  nanodet.cpp
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/msg/: distance.msg  obstacle_avoidance_result.msg
obstacle_avoidance/scripts/: lidar_obstacle_avoidance.py
obstacle_avoidance/src/: obstacle_avoidance.cpp
tracker_eco/: CMakeLists.txt  package.xml
tracker_kcf/: CMakeLists.txt  package.xml
tracker_kcf/src/: runtracker.cpp
tracker_kcf_qr/: CMakeLists.txt  package.xml
usb_cam0/: CMakeLists.txt  package.xml
usb_cam1/: CMakeLists.txt  package.xml
(+28 files in other folders)
